--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,4 +1,4 @@
-header, header .img, nav, body, #mission, .missioncontent{
+header, header .img, nav, body, #mission, .missioncontent, #featuretea, .item, .itemcontainer, #locations, .locationcontainer, .location, footer{
     display: flex;
 }
 
@@ -11,6 +11,7 @@ body{
     text-align: center;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 header{
@@ -34,6 +35,10 @@ nav{
     text-align: right;
     padding-right: 20px;
     flex-grow: 1;
+}
+
+nav a{
+    color: #ffffff;
 }
 
 nav span{
@@ -67,10 +72,78 @@ nav span{
 }
 
 #featuredtea{
-    width: 100%;
-    align-items: center;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-itemcontainer{
-    width: 1000px;
+#featuredtea h2{
+    margin: 50px auto 5px;
 }
+
+#featuredtea h4{
+    margin: 20px auto;
+}
+
+.itemcontainer{
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.item{
+    flex-direction: column;
+}
+
+.item img{
+    height: 200px;
+    width: 300px;
+    margin: 5px 15px;
+}
+
+.item span{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#locations{
+    background-image: url("../images/img-locations-background.jpg");
+    width: 1200px;
+    height: 500px;
+    margin: 80px auto 50px;
+    flex-direction: column;
+}
+
+#locations h2{
+    margin-top: 70px;
+    margin-bottom: 5px;
+}
+
+.location{
+    opacity: 1;
+    width: 300px;
+    margin: 5px 20px;
+    background-color: #000000;
+    flex-direction: column;
+}
+
+.locationcontainer{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;  
+}
+
+.contact{
+    height: 200px;
+    text-align: center;
+}
+
+footer{
+    width: 100%;
+}
+
+footer p{
+    text-align: left;
+    margin-left: 20px;
+}
+
